--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi, I'm Neena </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Denver, CO</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Listening to music, painting, traveling</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Successful Coder/Musician.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always had a niche for computers and would love to bring my creativity to coding.</p>
     </section>
 
     <footer id="footer">
